--- a/NagaiTask/res/layout/fragment_main.xml
+++ b/NagaiTask/res/layout/fragment_main.xml
@@ -14,14 +14,37 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="100dp" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="Some word plz" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editText1"
+        android:layout_alignRight="@+id/editText1"
+        android:layout_marginRight="14dp"
+        android:onClick="Clicked2"
+        android:text="Get text" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText1"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="16dp"
         android:onClick="Clicked"
         android:text="Google" />
 
